# HopStarBB

./: .gitignore  .gitmodules  HopStarBB.sln  Porject2.natvis  build.bat  build2.bat  check_braces.py  check_braces2.py
HopStarBB/: .gitignore  CMakeLists.txt  Compile.h  HopStarBB.vcxproj  HopStarBB.vcxproj.filters  Makefile.macos  addelem.h  arr.h  cobj2a.h  cobj2b.h  cobj2c.h  compile_commands.json  db2.h  elem.h  encode.h  extorch.h  f16c_shortname.h  file_engine.h  gc.h  imas.h  lldb.h  lldbdriver.h  llvm.h  main.cpp  main4.mm  main5.cpp  main7.cpp  mem.h  newelem.h  obj1a.h  obj1b.h  obj1c.h  obj2a.h  obj2b.h  obj2c.h  objvt.h  objz.h  objz.h.bak  opt.h  othelem.h  (+9 more)
HopStarBB/android/: build_log5.txt
HopStarBB/android/app/: build.gradle
HopStarBB/android/app/jni/src/: CMakeLists.txt  bgfx
HopStarBB/android/app/jni/src/bgfx.cmake/: bgfx.cmake  bimg.cmake  bx.cmake
HopStarBB/android/app/src/main/: AndroidManifest.xml
HopStarBB/android/app/src/main/assets/shaders/: v_unite2.def.sc  vs_unite2.bin.disasm
HopStarBB/android/app/src/main/java/org/libsdl/app/: HSBackground.java  HSBackgroundService.java  HSNotification.java  HopStarBBActivity.java  SDLSurface.java  SpatialLocation.java
HopStarBB/android/app/src/main/jniLibs/arm64-v8a/lib/pkgconfig/: libavcodec.pc  libavutil.pc  libswresample.pc
HopStarBB/android/app/src/main/jniLibs/armeabi-v7a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavformat.pc  libswresample.pc
HopStarBB/android/app/src/main/jniLibs/x86_64/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavformat.pc  libavutil.pc  libswresample.pc
HopStarBB/build_deps/: CMakeLists.txt
HopStarBB/cs/: CObj2.cs  CObj2A.cs  CObj2B.cs  CObj2C.cs  Compile.cs  LLVM.cs  Migrate.cs  Obj1.cs  Obj1A.cs  Obj1B.cs  Obj1C.cs  Obj1Z.cs  Obj2.cs  Obj2A.cs  Obj2B.cs  Obj2C.cs  Obj2Z.cs
HopStarBB/platform/apple/: AppDelegate.mm  Info-iOS.plist  SwiftFeatures.swift  ugui_ios_minimal.h
HopStarBB/shaders/: fs_unite2.sc  vs_unite2.sc
android/app/: build.gradle  local.properties
android/app/CMakeLists/: txt
android/app/jni/src/: CMakeLists.txt
android/app/jni/src/bgfx.cmake/: CMakeLists.txt  bgfx.cmake  bimg.cmake  bx.cmake
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/libsdl/app/: HSMedia.java  HSNearby.java
android/app/src/main/jniLibs/arm64-v8a/lib/pkgconfig/: libavdevice.pc  libavfilter.pc  libavformat.pc  libswscale.pc
android/app/src/main/jniLibs/armeabi-v7a/lib/pkgconfig/: libavfilter.pc  libavutil.pc  libswscale.pc
android/app/src/main/jniLibs/x86_64/lib/pkgconfig/: libavfilter.pc  libswscale.pc
